--- a/dev/api-er-dev.yml
+++ b/dev/api-er-dev.yml
@@ -40,6 +40,8 @@ spring:
       publisher-returns: true
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 ###配置打印sql //包路径为mapper文件包路径
 logging:
   level:
